--- a/build.gradle
+++ b/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'org.jetbrains.anko:anko-commons:0.10.4'
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
 }
