--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.core:core-ktx:1.0.1'
+    annotationProcessor 'androidx.annotation:annotation:1.0.2'
     implementation 'org.jetbrains.anko:anko-commons:0.10.4'
-    implementation 'com.github.bumptech.glide:glide:4.5.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
