--- a/build.gradle
+++ b/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation 'org.jetbrains.anko:anko-commons:0.10.4'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'jp.wasabeef:glide-transformations:4.0.0'
 }
